基本のスタイリング
マージンなし
ロゴのサイズを設定、余白を消す

--- a/style.css
+++ b/style.css
@@ -3,3 +3,14 @@
 body	{margin: 0;
 	font-family: 'メイリオ', 'Hiragino Kaku Gothic Pro', sans-serif}
 
+
+/* 基本 */
+
+.page {
+	margin: 0;
+}
+
+.page-head img {
+	width: 80px;
+	vertical-align: bottom;
+}
