--- a/style.css
+++ b/style.css
@@ -14,3 +14,16 @@ body	{margin: 0;
 	width: 80px;
 	vertical-align: bottom;
 }
+
+.page-nav,
+.page-btn-close {
+	display: none;
+}
+
+/* グリッド */
+.page {
+	display: grid;
+	grid-template-columns: 1fr;
+	grid-template-rows: auto 1fr auto;
+	min-height: 100vh;
+}
