--- a/style.css
+++ b/style.css
@@ -109,3 +109,10 @@ body	{margin: 0;
 	text-align: center;
 	font-size: 14px;
 }
+
+/* 1260px 以上 */
+@media (min-width: 1260px) {
+	.page {
+		grid-template-columns: 260px 1fr;
+	}
+}
