--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body	{margin: 0;
 .page-main {
 	grid-column: 1;
 	grid-row: 2;
-	background-color: #ffe4b5;
+	background-color: #fff;
 }
 
 /* ナビゲーション */
